--- a/src/styles/views/index.less
+++ b/src/styles/views/index.less
@@ -1,11 +1,10 @@
 /*
- * @Overview:   Global styles entry file
+ * @Overview:   Views entry file
  * @Author:     Zi_Jun
  * @Email:      zijun2030@163.com
  * @Date:       2020/7/8 15:19
  * @Mark:       //
  */
 
-@import "_variables";
-@import "_mixins";
-
+@import "home";
+@import "settings";
