--- a/src/styles/views/home.less
+++ b/src/styles/views/home.less
@@ -6,10 +6,31 @@
  * @Mark:       //
  */
 
-.home {
+.demo-home {
+  box-sizing: border-box;
   width: 100%;
-  height: 100%;
-  .flex-center();
-  font-size: 16px;
-  background-color: red;
+  min-height: 100vh;
+  padding: 46px 0;
+  color: @gray-8;
+  background: @white;
+  .demo-home-title {
+    padding: 0 16px;
+    display: flex;
+    align-items: center;
+    img {
+      .wh(32px);
+    }
+    span {
+      padding-left: 20px;
+      font-size: 32px;
+    }
+  }
+  .demo-home-desc {
+    padding-left: 16px;
+    padding-top: 18px;
+    padding-bottom: 30px;
+    color: @gray-6;
+  }
+  .demo-home-nav {
+  }
 }
