feat(*): Add SvgIcon commponent
A 新增SvgIcon组件且与Iconfont中svg兼容

--- a/src/styles/views/home.less
+++ b/src/styles/views/home.less
@@ -17,9 +17,10 @@
     padding: 0 16px;
     display: flex;
     align-items: center;
-    img {
+    .logo-icon {
       .wh(32px);
     }
+
     span {
       padding-left: 20px;
       font-size: 32px;
