feat(*): Add global navbar setting
A 新增 全局navbar设置

--- a/src/styles/views/home.less
+++ b/src/styles/views/home.less
@@ -9,8 +9,7 @@
 .demo-home {
   box-sizing: border-box;
   width: 100%;
-  min-height: 100vh;
-  padding: 46px 0;
+  padding: 46px 0 0 0;
   color: @gray-8;
   background: @white;
   .demo-home-title {
