--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -37,7 +37,6 @@ textarea {
 
 .router {
   width: 100%;
-  height: 100%;
   position: absolute;
   overflow-x: hidden;
   overflow-y: auto;
@@ -47,6 +46,21 @@ textarea {
   bottom: 0;
   left: 0;
   user-select: none;
+}
+.nav-router {
+  padding-top: 46px;
+  height: calc(100% - 46px);
+  @supports (bottom: env(safe-area-inset-bottom)){
+    padding-top: calc(env(safe-area-inset-top) + 46px);
+    padding-bottom: env(safe-area-inset-bottom);
+  }
+  @supports (bottom: constant(safe-area-inset-bottom)) {
+    padding-top: calc(constant(safe-area-inset-top) + 46px);
+    padding-bottom: constant(safe-area-inset-bottom);
+  }
+}
+.common-router {
+  height: 100%;
   @supports (bottom: env(safe-area-inset-bottom)){
     padding-top: env(safe-area-inset-top);
     padding-bottom: env(safe-area-inset-bottom);
@@ -56,6 +70,7 @@ textarea {
     padding-bottom: constant(safe-area-inset-bottom);
   }
 }
+
 
 /*=====================================
  Iconfont
