feat(*): Add language support

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -116,7 +116,7 @@ textarea {
 .fade-enter-active,
 .fade-leave-active{
   will-change: transform;
-  transition: all @transition-time linear 100ms;
+  transition: all @transition-time ease-in-out;
   position: absolute;
   width: 100%;
   left: 0;
