--- a/src/styles/views/home.less
+++ b/src/styles/views/home.less
@@ -7,13 +7,12 @@
  */
 
 .demo-home {
-  box-sizing: border-box;
   width: 100%;
-  padding: 46px 0 0 0;
   color: @gray-8;
   background: @white;
   .demo-home-title {
-    padding: 0 16px;
+
+    padding: 46px 16px 0;
     display: flex;
     align-items: center;
     .logo-icon {
